--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
+python-dotenv==1.1.0
+langgraph==0.4.5 
+langchain-deepseek==0.1.3
+langchain-community==0.3.24
+langchain-chroma==0.2.4
+sentence-transformers==4.1.0
+pypdf==5.5.0
 fastapi==0.115.9
 uvicorn==0.34.2
